--- a/app/globals.css
+++ b/app/globals.css
@@ -96,15 +96,6 @@ body {
   body {
     @apply bg-white text-stone-800 font-sans;
   }
-
-  h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6 {
-    @apply font-serif;
-  }
 }
 
 .font-serif {
@@ -176,3 +167,17 @@ html {
 .fade-in-heading { animation: fade-in-heading 1.1s cubic-bezier(.4,0,.2,1) both; }
 .fade-in-paragraph { animation: fade-in-paragraph 1.1s cubic-bezier(.4,0,.2,1) both; }
 .fade-in-span { animation: fade-in-span 1.2s cubic-bezier(.4,0,.2,1) both; }
+.uppercase {
+  letter-spacing: 0.15em !important;
+}
+@font-face {
+  font-family: 'Dream Avenue';
+  src: url('../public/fonts/Dream-Avenue.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+.font-dream-avenue {
+  font-family: 'Dream Avenue', 'Playfair Display', serif !important;
+}
